--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="form-section" id="formSection">
             <!-- Podsekcja: Nagłówek formularza -->
             <div class="header-row">
+                <button class="btn btn-functional" id="newButton" style="position: absolute; right: 0;">Porównaj Kredyt</button>
                 <h4>Kalkulator Kredytu Hipotecznego</h4>
             </div>
 
@@ -141,128 +142,3 @@
                 </div>
             </div>
         </div>
-
-        <!-- Sekcja: Wyniki -->
-        <div class="result-section" id="resultSection" style="display: none;">
-            <!-- Podsekcja: Nagłówek wyników -->
-            <div class="result-header">
-                <div class="button-container">
-                    <button class="btn btn-functional" onclick="showForm()">Powrót do edycji</button>
-                    <button id="generatePdfBtn" class="btn btn-functional">Generuj PDF</button>
-                </div>
-                <h4>Podsumowanie wyników</h4>
-            </div>
-
-            <!-- Podsekcja: Wykres i podsumowanie -->
-            <div class="result-container">
-                <div class="result-wrapper-chart">
-                    <div class="chart-container">
-                        <div class="chart">
-                            <canvas id="creditChart"></canvas>
-                        </div>
-                        <div class="chart-legend">
-                            <div class="legend-item" data-index="0">
-                                <div class="color-box" style="background-color: #28a745;">
-                                    <span class="value" id="valueKapital">-</span>
-                                </div>
-                                <span class="legend-text">Kapitał</span>
-                            </div>
-                            <div class="legend-item" data-index="1">
-                                <div class="color-box" style="background-color: #007bff;">
-                                    <span class="value" id="valueOdsetki">-</span>
-                                </div>
-                                <span class="legend-text">Odsetki</span>
-                            </div>
-                            <div class="legend-item" data-index="2">
-                                <div class="color-box" style="background-color: #dc3545;">
-                                    <span class="value" id="valueNadplata">-</span>
-                                </div>
-                                <span class="legend-text">Nadpłaty</span>
-                            </div>
-                            <div class="legend-item" data-index="3">
-                                <div class="color-box" style="background-color: #6f42c1;">
-                                    <span class="value" id="valueProwizja">-</span>
-                                </div>
-                                <span class="legend-text">Prowizja</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="summary-footer">
-                        <span class="highlight yellow">Okres kredytowania: <span id="okresPoNadplacie">-</span> mc-y</span>
-                        <span class="highlight green">Całkowita kwota spłaty: <span id="koszt">-</span> zł</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Podsekcja: Harmonogram spłat -->
-            <div class="harmonogram-container">
-                <div class="result-wrapper-harmonogram">
-                    <div class="harmonogram">
-                        <div class="harmonogram-header">
-                            <h5 class="btn-toggle" onclick="toggleHarmonogram('harmonogramContent')">Harmonogram spłat ▼</h5>
-                        </div>
-                        <div id="harmonogramContent">
-                            <table class="table table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>Miesiąc</th>
-                                        <th>Rata</th>
-                                        <th>Oproc.</th>
-                                        <th>Nadpłata</th>
-                                        <th>Kapitał</th>
-                                        <th>Odsetki</th>
-                                        <th>Kapitał do spłaty</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="harmonogramTabela"></tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Kalkulator (ukryty domyślnie) -->
-    <div class="sidebar-box draggable" id="calculatorBox" style="display: none;">
-        <h3 class="sidebar-header">
-            Kalkulator
-            <button id="closeCalcBtn" class="close-btn" title="Zamknij kalkulator">×</button>
-        </h3>
-        <div class="calculator">
-            <input type="text" id="calcDisplay" readonly>
-            <div class="calc-buttons">
-                <button class="calc-btn calc-clear">C</button>
-                <button class="calc-btn calc-operation">±</button>
-                <button class="calc-btn calc-operation">%</button>
-                <button class="calc-btn calc-operation">/</button>
-
-                <button class="calc-btn calc-number">7</button>
-                <button class="calc-btn calc-number">8</button>
-                <button class="calc-btn calc-number">9</button>
-                <button class="calc-btn calc-operation">*</button>
-
-                <button class="calc-btn calc-number">4</button>
-                <button class="calc-btn calc-number">5</button>
-                <button class="calc-btn calc-number">6</button>
-                <button class="calc-btn calc-operation">-</button>
-
-                <button class="calc-btn calc-number">1</button>
-                <button class="calc-btn calc-number">2</button>
-                <button class="calc-btn calc-number">3</button>
-                <button class="calc-btn calc-operation">+</button>
-
-                <button class="calc-btn calc-number calc-zero">0</button>
-                <button class="calc-btn calc-number">.</button>
-                <button class="calc-btn calc-equals">=</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Skrypty zewnętrzne -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/jspdf@2.5.2/dist/jspdf.umd.min.js"></script>
-    <script src="https://unpkg.com/jspdf-autotable@3.8.3/dist/jspdf.plugin.autotable.min.js"></script>
-    <script src="script.js"></script>
-</body>
-</html>
