--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <div class="result-wrapper-harmonogram">
                     <div class="harmonogram">
                         <div class="harmonogram-header">
-                            <h5 class="btn-toggle" onclick="toggleHarmonogram('harmonogramContent')">Harmonogram spłat ▼</h5>
+                            <h5 class="btn-toggle" onclick="toggleHarmonogram('harmonogramContent')" aria-label="Przełącz widoczność harmonogramu spłat">Harmonogram spłat ▼</h5>
                         </div>
                         <div id="harmonogramContent">
                             <table class="table table-striped">
@@ -219,7 +219,7 @@
                                         <th>Nadpłata</th>
                                         <th>Kapitał</th>
                                         <th>Odsetki</th>
-                                        <th>Kapitał do spłaty</th>
+                                        <th>Do spłaty</th>
                                     </tr>
                                 </thead>
                                 <tbody id="harmonogramTabela"></tbody>
